src/test/ui/range/issue-54505-no-literals.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:16:5
   |
LL |     take_range(std::ops::Range { start: 0, end: 1 });
   |     ^^^^^^^^^^^------------------------------------^
   |                |
   |                expected `&_`, found `std::ops::Range<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:21:5
   |
LL |     take_range(::std::ops::Range { start: 0, end: 1 });
   |     ^^^^^^^^^^^--------------------------------------^
   |                |
   |                expected `&_`, found `std::ops::Range<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:26:5
   |
LL |     take_range(std::ops::RangeFrom { start: 1 });
   |     ^^^^^^^^^^^--------------------------------^
   |                |
   |                expected `&_`, found `RangeFrom<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:31:5
   |
LL |     take_range(::std::ops::RangeFrom { start: 1 });
   |     ^^^^^^^^^^^----------------------------------^
   |                |
   |                expected `&_`, found `RangeFrom<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:36:5
   |
LL |     take_range(std::ops::RangeFull {});
   |     ^^^^^^^^^^^----------------------^
   |                |
   |                expected `&_`, found `RangeFull`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:41:5
   |
LL |     take_range(::std::ops::RangeFull {});
   |     ^^^^^^^^^^^------------------------^
   |                |
   |                expected `&_`, found `RangeFull`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:46:5
   |
LL |     take_range(std::ops::RangeInclusive::new(0, 1));
   |     ^^^^^^^^^^^-----------------------------------^
   |                |
   |                expected `&_`, found `RangeInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:51:5
   |
LL |     take_range(::std::ops::RangeInclusive::new(0, 1));
   |     ^^^^^^^^^^^-------------------------------------^
   |                |
   |                expected `&_`, found `RangeInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:56:5
   |
LL |     take_range(std::ops::RangeTo { end: 5 });
   |     ^^^^^^^^^^^----------------------------^
   |                |
   |                expected `&_`, found `RangeTo<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:61:5
   |
LL |     take_range(::std::ops::RangeTo { end: 5 });
   |     ^^^^^^^^^^^------------------------------^
   |                |
   |                expected `&_`, found `RangeTo<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:66:5
   |
LL |     take_range(std::ops::RangeToInclusive { end: 5 });
   |     ^^^^^^^^^^^-------------------------------------^
   |                |
   |                expected `&_`, found `RangeToInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error[E0308]: arguments to this function are incorrect
  --> $DIR/issue-54505-no-literals.rs:71:5
   |
LL |     take_range(::std::ops::RangeToInclusive { end: 5 });
   |     ^^^^^^^^^^^---------------------------------------^
   |                |
   |                expected `&_`, found `RangeToInclusive<_>`
   |
note: function defined here
  --> $DIR/issue-54505-no-literals.rs:12:4
   |
LL | fn take_range(_r: &impl RangeBounds<i8>) {}
   |    ^^^^^^^^^^ -------------------------
help: provide an argument of the correct type
   |
LL |     take_range({&_});
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0308`.
